# sitemap-monitor

./: .gitignore  README.md  config.yaml  package.json  pyproject.toml
.github/workflows/: monitor.yml
dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  keywordRange.test.ts  keywordRange.ts  styles.css  trends.ts  vite-env.d.ts
data/: .anomalies.json  .last_run.json  crazygames.json  gamepix.json  kizi.json  lagged.json  miniplay.json  playhop.json  poki.json  y8.json
reports/: 2026-07-21-crazygames.json  2026-07-21-gamepix.json  2026-07-21-kizi.json  2026-07-21-lagged.json  2026-07-21-miniplay.json  2026-07-21-playhop.json  2026-07-21-poki.json  2026-07-21-y8.json  2026-07-22-crazygames.json  2026-07-22-gamepix.json  2026-07-22-kizi.json  2026-07-22-lagged.json  2026-07-22-miniplay.json  2026-07-22-playhop.json  2026-07-22-poki.json  2026-07-22-y8.json  2026-07-23-crazygames.json  2026-07-23-gamepix.json  2026-07-23-kizi.json  2026-07-23-lagged.json  2026-07-23-miniplay.json  2026-07-23-playhop.json  2026-07-23-poki.json  2026-07-23-y8.json
src/sitemap_monitor/: __init__.py  cli.py  config.py  diff.py  envutil.py  fetch.py  interval.py  keywords.py  parse.py  report.py  store.py
tests/: test_api.py  test_cli.py  test_config.py  test_envutil.py  test_fetch.py  test_keywords.py  test_parse.py  test_repair_keywords.py  test_report.py  test_services.py  test_store_diff.py
workers/: README.md  package-lock.json  package.json  wrangler.toml
workers/scripts/: put-secrets.mjs
(+11 files in other folders)
